--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,10 @@ jobs:
         os:
           - runner: ubuntu-latest
             name: ubuntu
-          - runner: macos-latest
-            name: mac
-          - runner: windows-latest
-            name: windows
+          # - runner: macos-latest
+          #   name: mac
+          # - runner: windows-latest
+          #   name: windows
 
     steps:
       - uses: actions/checkout@v2
@@ -34,9 +34,9 @@ jobs:
 
       - name: Print runner.os, runner.workspace, matrix.os.runner, github.workspace
         run: echo 'runner.os == ${{ runner.os }}';
-            echo 'runner.workspace == ${{ runner.workspace }}';
-            echo 'matrix.os.runner == ${{ matrix.os.runner }}';
-            echo 'github.workspace == ${{ github.workspace }}'
+          echo 'runner.workspace == ${{ runner.workspace }}';
+          echo 'matrix.os.runner == ${{ matrix.os.runner }}';
+          echo 'github.workspace == ${{ github.workspace }}'
 
       - name: Create Build Environment
         run: cmake -E make_directory ${{ runner.workspace }}/build
@@ -95,7 +95,7 @@ jobs:
         with:
           name: HelloWorld-${{ runner.os }}
           path: HelloWorld-${{ runner.os }}.zip
-      
+
       # Package and release for Windows
       - name: Prepare Artefacts Windows
         if: startsWith(matrix.os.runner, 'windows')
