--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,10 @@ jobs:
         os:
           - runner: ubuntu-latest
             name: ubuntu
-          # - runner: macos-latest
-          #   name: mac
-          # - runner: windows-latest
-          #   name: windows
+          - runner: macos-latest
+            name: mac
+          - runner: windows-latest
+            name: windows
 
     steps:
       - uses: actions/checkout@v2
